--- a/assets/server.template.conf
+++ b/assets/server.template.conf
@@ -1,6 +1,6 @@
 [Interface]
-Address = 10.0.0.1/16
+Address = ${ADDRESS}
 PrivateKey = ${PRIVATE_KEY}
-ListenPort = 51820
+ListenPort = ${LISTEN_PORT}
 PostUp = iptables -A FORWARD -i ${INTERFACE_NAME} -o ${INTERFACE_NAME} -j ACCEPT
 PostDown = iptables -D FORWARD -i ${INTERFACE_NAME} -o ${INTERFACE_NAME} -j ACCEPT
